prod_snapshot_2015-09-24_1030/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>After Hours Support</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Assigned</fullName>
        </values>
        <values>
            <fullName>Complete</fullName>
        </values>
        <values>
            <fullName>Need more info</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>DC Support</fullName>
        <description>DealChicken Support Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Complete</fullName>
        </values>
        <values>
            <fullName>Hold</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Open</fullName>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>DealChicken Customer Support Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>Needs Reply</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Resolved</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>DealChicken Merchant Support Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>Needs Reply</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Resolved</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>GL Call Request</fullName>
        <description>Sales Call Request Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Archived</fullName>
        </values>
        <values>
            <fullName>Assigned</fullName>
        </values>
        <values>
            <fullName>Awaiting Close</fullName>
        </values>
        <values>
            <fullName>Cancelled - GL</fullName>
        </values>
        <values>
            <fullName>Cancelled - Rep</fullName>
        </values>
        <values>
            <fullName>Requested</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>GL Care</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Archived</fullName>
        </values>
        <values>
            <fullName>In Process</fullName>
        </values>
        <values>
            <fullName>Resolved</fullName>
        </values>
        <values>
            <fullName>Unopened</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>GL Digital Audit</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Archived</fullName>
        </values>
        <values>
            <fullName>Assigned</fullName>
        </values>
        <values>
            <fullName>Awaiting Close</fullName>
        </values>
        <values>
            <fullName>Cancelled - GL</fullName>
        </values>
        <values>
            <fullName>Cancelled - Rep</fullName>
        </values>
        <values>
            <fullName>Requested</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Waiting - Rep Info</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>GL Email Count</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Archived</fullName>
        </values>
        <values>
            <fullName>Assigned</fullName>
        </values>
        <values>
            <fullName>Awaiting Close</fullName>
        </values>
        <values>
            <fullName>Cancelled - GL</fullName>
        </values>
        <values>
            <fullName>Cancelled - Rep</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>Requested</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Waiting - Rep Info</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>GL Rate Request</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Approved</fullName>
        </values>
        <values>
            <fullName>Archived</fullName>
        </values>
        <values>
            <fullName>Cancelled</fullName>
        </values>
        <values>
            <fullName>In Process</fullName>
        </values>
        <values>
            <fullName>Not Approved</fullName>
        </values>
        <values>
            <fullName>Unresolved</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>GL Website Audit</fullName>
        <description>Status Settings for Website Audits</description>
        <isActive>true</isActive>
        <values>
            <fullName>Archived</fullName>
        </values>
        <values>
            <fullName>Assigned</fullName>
        </values>
        <values>
            <fullName>Awaiting Close</fullName>
        </values>
        <values>
            <fullName>Cancelled - GL</fullName>
        </values>
        <values>
            <fullName>Cancelled - Rep</fullName>
        </values>
        <values>
            <fullName>Requested</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Waiting - Rep Info</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>OnBoarding</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Approved</fullName>
        </values>
        <values>
            <fullName>Archived</fullName>
        </values>
        <values>
            <fullName>Cancelled</fullName>
        </values>
        <values>
            <fullName>In Process</fullName>
        </values>
        <values>
            <fullName>Not Approved</fullName>
        </values>
        <values>
            <fullName>Unresolved</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Support Ticket</fullName>
        <description>Support Process for the Support Ticket Record type</description>
        <isActive>true</isActive>
        <values>
            <fullName>Business Approved</fullName>
        </values>
        <values>
            <fullName>Cancelled</fullName>
        </values>
        <values>
            <fullName>Completed Support</fullName>
        </values>
        <values>
            <fullName>Denied</fullName>
        </values>
        <values>
            <fullName>Duplicate</fullName>
        </values>
        <values>
            <fullName>In Review</fullName>
        </values>
        <values>
            <fullName>New Support</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <fields>
        <fullName>A_Keyword_01_Result__c</fullName>
        <label>A Keyword 01 Result</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>A_Keyword_01__c</fullName>
        <label>A Keyword 01</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>A_Keyword_02_Result__c</fullName>
        <label>A Keyword 02 Result</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>A_Keyword_02__c</fullName>
        <label>A Keyword 02</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>A_Keyword_03_Result__c</fullName>
        <label>A Keyword 03 Result</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>A_Keyword_03__c</fullName>
        <label>A Keyword 03</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Affl_Rep_Manager__c</fullName>
        <label>Affl Rep Manager</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Affl_Sales_Rep_Text__c</fullName>
        <inlineHelpText>Sales Rep Name - Entered If Not Available In The Default List</inlineHelpText>
        <label>Affl Sales Rep Text</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Affl_Sales_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Affl Sales Rep</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <formula>Code_End_Date__c -  Care_Case_Created_Stamp__c - Weekend_Days__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If Open, Now - DateTime Assigned Or Created, If Closed, Closed Stamp - Date Assigned Or Created.</inlineHelpText>
        <label>Age</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Basic_Field_For_Set_Test2__c</fullName>
        <label>Basic Field For Set Test2</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLCWebForm__c</fullName>
        <label>CLCWebForm</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CR_Addl_Info__c</fullName>
        <label>CR Addl Info</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CR_Call_Date__c</fullName>
        <label>CR Call Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CR_Call_Direction__c</fullName>
        <label>CR Call Direction</label>
        <picklist>
            <picklistValues>
                <fullName>GL Running The Entire Presentation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GL In Background Providing Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GL On Call As Product Specialist</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CR_Call_Format__c</fullName>
        <label>CR Call Format</label>
        <picklist>
            <picklistValues>
                <fullName>Conf Call Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call &amp; Webinar</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CR_Call_Outcome__c</fullName>
        <label>CR Call Outcome</label>
        <picklist>
            <picklistValues>
                <fullName>Close The Sale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Schedule Next Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deliver Final Proposal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Soft Close On Sale</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CR_Call_Time__c</fullName>
        <label>CR Call Time</label>
        <picklist>
            <picklistValues>
                <fullName>08:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08:15 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08:45 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09:15 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09:45 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:15 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:45 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:15 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:45 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:15 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:45 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01:15 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01:45 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02:15 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02:45 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03:15 PM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CR_Call_Zone__c</fullName>
        <label>CR Call Zone</label>
        <picklist>
            <picklistValues>
                <fullName>ET</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CR_Client_Dig_Spend__c</fullName>
        <label>CR Client Dig Spend</label>
        <picklist>
            <picklistValues>
                <fullName>Never</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Currently</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Previously</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CR_Client_Emphasis_Points__c</fullName>
        <label>CR Client Emphasis Points</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CR_Client_Knowledge__c</fullName>
        <label>CR Client Knowledge</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CR_Client_Products__c</fullName>
        <label>CR Client Products</label>
        <picklist>
            <picklistValues>
                <fullName>PPC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Website</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facebook</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Re-Targeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maps-Reputation Dashboard</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>CR_Client_Sensitivities__c</fullName>
        <label>CR Client Sensitivities</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CR_Client_Spend_Type__c</fullName>
        <label>CR Client Spend Type</label>
        <picklist>
            <picklistValues>
                <fullName>Do Not Know</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In House</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Third Party</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CR_Conf_Number_Login__c</fullName>
        <label>CR Conf Number &amp; Login</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CR_Rep_Location__c</fullName>
        <label>CR Rep Location</label>
        <picklist>
            <picklistValues>
                <fullName>On Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Location</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CR__c</fullName>
        <label>CR - Digital Audit Issue</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Call_Request_Length__c</fullName>
        <label>Call Request Length</label>
        <picklist>
            <picklistValues>
                <fullName>1/4 Hour</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>1/2 Hour</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3/4 Hour</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 Hour</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CareRecordTypeId__c</fullName>
        <formula>CASESAFEID(RecordTypeId)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CareRecordTypeId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Care_Case_Created_Stamp__c</fullName>
        <description>Created Date for Care Cases based on CreatedBy User = &quot;GL Care Site Guest User&quot;</description>
        <formula>if( CONTAINS(CreatedBy.Username, &apos;gl_care@gannettlocal&apos;), CreatedDate, NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Care Case Created Stamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Care_Category_F__c</fullName>
        <description>RIGHT(TEXT(Care_Category__c),LEN(TEXT(Care_Category__c)) - FIND(TEXT(Care_Category__c),&quot;-&quot;))</description>
        <formula>RIGHT(TEXT(Care_Category__c),LEN(TEXT(Care_Category__c)) - FIND(&quot;-&quot;,TEXT(Care_Category__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Care Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Care_Category__c</fullName>
        <label>Care Category</label>
        <picklist>
            <controllingField>Care_Group__c</controllingField>
            <picklistValues>
                <fullName>AM-Communication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AM-Quality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AM-Timeliness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Blast-Communication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Blast-Quality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Blast-Timeliness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facebook Ads-Communication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facebook Ads-Quality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facebook Ads-Timeliness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance Team-Communication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance Team-Quality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance Team-Timeliness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jumpstart-Communication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jumpstart-Quality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jumpstart-Timeliness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Knowledge Team-Communication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Knowledge Team-Quality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Knowledge Team-Timeliness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maps/Rep Dashboard-Communication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maps/Rep Dashboard-Quality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maps/Rep Dashboard-Timeliness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Market-Communication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Market-Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Market-Quality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Market-Timeliness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phx Design-Communication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phx Design-Quality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phx Design-Timeliness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PM-Communication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PM-Quality</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Care_Group__c</fullName>
        <label>Care Group</label>
        <picklist>
            <picklistValues>
                <fullName>AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Blast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facebook Ads</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jumpstart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Knowledge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maps/Rep Dashboard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Market</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phx Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PPC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reporting Dashboard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retargeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Media Mgmt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web Dev</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Care_Issue_F__c</fullName>
        <formula>MID(TEXT(Care_Issue__c),

(FIND(&quot;-&quot;,TEXT(Care_Issue__c),FIND(&quot;-&quot;,TEXT(Care_Issue__c))+1))+2,


(FIND(&quot;--&quot;,TEXT(Care_Issue__c),FIND(&quot;--&quot;,TEXT(Care_Issue__c))+2)) -(FIND(&quot;--&quot;,TEXT(Care_Issue__c),FIND(&quot;--&quot;,TEXT(Care_Issue__c))))-2

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Care Issue</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Care_Issue__c</fullName>
        <label>Care Issue</label>
        <picklist>
            <controllingField>Care_Category__c</controllingField>
            <picklistValues>
                <fullName>AM-Communication--Incorrect Info Provided--</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AM-Communication--N/E Information Provided--</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AM-Communication--No Update Provided to Market--</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AM-Communication--Unprofessional--</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AM-Quality--AtTask Creation/Assignment Issues--</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AM-Quality--Process Failure (ie OOO auto email)--</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AM-Timeliness--Delayed Response--</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AM-Timeliness--Missed SLA--</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Blast-Communication--Incorrect Information Provided--</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Blast-Communication--N/E Information Provided--</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Blast-Quality--Broken/Incorrect Links--</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Blast-Quality--Creative: Call/Form Tracking Issues--</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Blast-Quality--Creative: Click Through URL&apos;s--</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Blast-Quality--Creative: Copy/Information Missing--</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Blast-Quality--Creative: Copy/Not Aligned To Goals--</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Blast-Quality--Creative: Grammar/Spelling--</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Blast-Quality--Creative: Images Wrong/Ill-Fitting--</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Blast-Quality--Creative: Missing Information--</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Blast-Quality--Creative: Proof Does Not Meet Expectations--</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Blast-Quality--Delivery: Incorrect Broadcast Date--</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Blast-Quality--Delivery: Incorrect Demo/Geo Targeting--</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Blast-Quality--Delivery: Incorrect Quantity--</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Blast-Quality--Delivery: Incorrect Recipient List--</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Blast-Timeliness--Delayed Response--</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Blast-Timeliness--Missed SLA--</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facebook Ads-Communication--Incorrect Information Provided--</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facebook Ads-Communication--N/E Information Provided--</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facebook Ads-Communication--No Update Provided To AM--</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facebook Ads-Quality--Ad Copy: Information Missing--</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facebook Ads-Quality--Ad Copy: Wrong Information--</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Care_Request_Reason__c</fullName>
        <label>Care Request Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Audit Request Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Expectation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missed SLA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Expectation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Delivery/Performance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cause__c</fullName>
        <label>Cause</label>
        <picklist>
            <picklistValues>
                <fullName>Communication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Timeliness</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Close_Calender_Date__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Close Calender Date</label>
        <referenceTo>KPICalender__c</referenceTo>
        <relationshipLabel>Cases (Close Calender Date)</relationshipLabel>
        <relationshipName>ClosedCaseDate</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Closed_Day__c</fullName>
        <formula>IF(MOD( DATEVALUE( ClosedDate) - DATE(2000,1,2),7) = 0,DATEVALUE(ClosedDate) + 1, 
IF(MOD( DATEVALUE( ClosedDate) - DATE(2000,1,1),7) = 0,DATEVALUE(ClosedDate) + 2,DATEVALUE(ClosedDate)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Closed Day</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Closed_Stamp__c</fullName>
        <label>Closed Stamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Code_Days__c</fullName>
        <formula>DATEVALUE(CreatedDate) - TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Code Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>